examples/test/testpolicy17111.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17111
  namespace: namespace12
spec:
  podSelector:
    matchLabels:
      key37: value19
      key20: value42
      key42: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value41
          key14: value4
      podSelector:
        matchLabels:
          key16: value41
          key7: value30
          key42: value13
